k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-mailer-backend
  namespace: cambouis-prod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: job-mailer-backend
  template:
    metadata:
      labels:
        app: job-mailer-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: job-mailer-backend
          image: ghcr.io/CambouisCORP/cambouis-job-mailer-backend:prod
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 250m
              memory: 0.5Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
