k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: job-mailer-backend
  namespace: cambouis-prod
spec:
  type: ClusterIP
  selector:
    app: job-mailer-backend
  ports:
    - port: 8000
      targetPort: 8000
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
